force-app/main/default/objects/Sandboxes__c/Sandboxes__c.object-meta.xml
<CustomObject>
    <label>Sandboxes</label>
    <nameField>
        <displayFormat>SBENTRY-{00000}</displayFormat>
        <label>SBENTRY</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sandboxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>