force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Activated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activated</label>
    <type>DateTime</type>
</CustomField>