force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Elapsed_Days_Since_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Elapsed_Days_Since_Refreshed__c</fullName>
    <label>Days Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>