force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sandbox</label>
    <length>20</length>
    <type>Text</type>
</CustomField>