force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Number__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Number__c</fullName>
    <label>Sandbox Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>