force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Status__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>