force-app/main/default/objects/Sandboxes__c/fields/Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>