force-app/main/default/objects/Sandboxes__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tenant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>