force-app/main/default/objects/Sandboxes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>RecordProductionDate__c</columns>
    <columns>Sandbox_Name__c</columns>
    <columns>Sandbox_Number__c</columns>
    <columns>Sandbox_Type__c</columns>
    <columns>TenantId__c</columns>
    <columns>Sandbox_Elapsed_Days_Since_Refreshed__c</columns>
    <columns>Sandbox_Activated_Date__c</columns>
    <columns>Tenant__c</columns>
    <columns>Sandbox_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>